--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Hangman</title>
-  <style>
-    /* Add CSS styles here */
-  </style>
+   <title>Hangman</title>
+   <style>
+      /* Add CSS styles here */
+   </style>
 </head>
+
 <body>
-  <h1>Hangman</h1>
-  <form id="guess-form">
-    <label for="guess-input">Enter a letter:</label>
-    <input type="text" id="guess-input" maxlength="1">
-    <button type="submit">Guess</button>
-  </form>
-  <div id="word">
-    <!-- Add blanks for unknown letters here -->
-  </div>
-  <div id="guesses-remaining">
-    <!-- Add the number of remaining guesses here -->
-  </div>
-  <div id="scaffold">
-    <!-- Add the visual representation of the hangman game here -->
-  </div>
-  <script src="script.js"></script>
+   <h1>Hangman</h1>
+   <form id="guess-form">
+      <label for="guess-input">Enter a letter:</label>
+      <input type="text" id="guess-input" maxlength="1">
+      <button type="submit">Guess</button>
+   </form>
+   <div id="word">
+      <!-- Add blanks for unknown letters here -->
+   </div>
+   <div id="guesses-remaining">
+      <!-- Add the number of remaining guesses here -->
+   </div>
+   <div id="wrong-guesses">
+      <!-- Add the wrong guesses here -->
+   </div>
+   <div id="scaffold">
+      <!-- Add the visual representation of the hangman game here -->
+   </div>
+   <script src="script.js"></script>
 </body>
+
 </html>
