--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
    <title>Hangman</title>
-   <style>
-      /* Add CSS styles here */
-   </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
