--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <h1>Hangman</h1>
    <form id="guess-form">
       <label for="guess-input">Enter a letter:</label>
-      <input type="text" id="guess-input" maxlength="1">
+      <input type="text" id="guess-input" class="input-style" maxlength="1">
       <button type="submit">Guess</button>
    </form>
    <div id="word">
